Update executable name to main.exe

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -28,9 +28,9 @@
         "-std=c99",
         "-Wall",
         "-g",
-        "${workspaceFolder}\\MP2.c",
+        "${workspaceFolder}\\main.c",
         "-o",
-        "${workspaceFolder}\\MP2.exe"
+        "${workspaceFolder}\\main.exe"
       ],
       "options": {
         "cwd": "${workspaceFolder}"
