--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "name": "(gdb) Launch",
       "type": "cppdbg",
       "request": "launch",
-      "program": "${workspaceFolder}/MP2.exe",
+      "program": "${workspaceFolder}/main.exe",
       "args": [],
       "stopAtEntry": false,
       "cwd": "${fileDirname}",
@@ -17,10 +17,6 @@
       "MIMode": "gdb",
       "miDebuggerPath": "C:\\MinGW\\bin\\gdb.exe",
       "setupCommands": [
-        // {
-        //   "description": "Compile",
-        //   "text": "gcc MP2.c -std=c99 -Wall -o MP2 -g"
-        // },
         {
           "description": "Enable pretty-printing for gdb",
           "text": "-enable-pretty-printing",
